--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -15,7 +15,7 @@
 
     <h5>Estudantes</h5>
     <ul>
-        <a href="{% url 'alunos_inscritos' %}"><li>Por Semestre</li></a>
+        <a href="{% url 'estudantes_inscritos' %}"><li>Por Semestre</li></a>
     </ul>
 
     <h5>Áreas de Interesse</h5>
@@ -32,6 +32,7 @@
     <h5>Avaliações</h5>
     <ul>
         <a href="{% url 'objetivos_rubricas' %}"><li>Objetivos de Aprendizado e Rubricas</li></a>
+        <a href="{% url 'estudantes_notas' %}"><li>Resultados das Avaliações dos Estudantes</li></a>
         <a href="{% url 'resultado_bancas' %}"><li>Resultado Bancas</li></a>
         <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
         <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
