--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -71,7 +71,7 @@
       <small>
       <ol>
         {% for alocacao in projeto.alocacao_set.all %}
-          <li><a href="{% url 'aluno_detail' alocacao.aluno.id %}"
+          <li><a href="{% url 'estudante_detail' alocacao.aluno.id %}"
               data-toggle="tooltip" data-html="true" animation="true" title="">
               {{alocacao.aluno.user.get_full_name}}
               </a>
