--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -12,7 +12,7 @@
     <hr>
     <h5>Listagem completa</h5>
     <ul>
-        <a href="{% url 'alunos_lista' %}"><li>Estudantes</li></a>
+        <a href="{% url 'estudantes_lista' %}"><li>Estudantes</li></a>
         <a href="{% url 'propostas_apresentadas' %}"><li>Propostas</li></a>
         <a href="{% url 'projetos_lista' %}"><li>Projetos</li></a>
         <a href="{% url 'organizacoes_lista' %}"><li>Organizações</li></a>
