--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -31,7 +31,7 @@
       <ul>
         {% for alocacao in banca.projeto.alocacao_set.all %}
           <li>
-            {% comment %} <a href="{% url 'aluno_detail' alocacao.aluno.id %}">{% endcomment %} 
+            {% comment %} <a href="{% url 'estudante_detail' alocacao.aluno.id %}">{% endcomment %} 
               {{alocacao.aluno.user.get_full_name}}
             {% comment %} </a>
             <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
