--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -93,7 +93,7 @@
   <ul>
     {% for alocacao in banca.projeto.alocacao_set.all %}
       <li>
-        <a href="{% url 'aluno_detail' alocacao.aluno.id %}">
+        <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
           {{alocacao.aluno.user.get_full_name}}
         </a>
         <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
