--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -149,7 +149,7 @@
               <ul style="margin-bottom:0px;">
                 {% for alocacao in banca.projeto.alocacao_set.all %}
                   <li>
-                    <a class="imprimir" href="{% url 'aluno_detail' alocacao.aluno.id %}">
+                    <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
                       {{alocacao.aluno.user.get_full_name}}
                     </a>
                     <a class="email" href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
