--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -41,7 +41,7 @@
                 <b>Grupo:</b>
                 <ol>
                   {% for alocacao in e.projeto.alocacao_set.all %} 
-                    <li><a href="{% url 'aluno_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}} [{{ alocacao.aluno.get_curso_display }}] &nbsp;
+                    <li><a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}} [{{ alocacao.aluno.get_curso_display }}] &nbsp;
                     </a></li>
                   {% endfor %}
                 </ol>
