--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -49,7 +49,7 @@
           <tr class="item">
             <td class="{% if opcoes.count >= 5 %}text-success{% else %}text-danger{% endif %}"> &#x2B24; </td>
             <td>
-              <a href="{% url 'aluno_detail' aluno.id %}"
+              <a href="{% url 'estudante_detail' aluno.id %}"
                   data-toggle="tooltip" data-html="true" animation="true" title="
                   {% for opcao in opcoes %}
                     <b>#{{ opcao.prioridade }} :</b>
